--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,14 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "sst bind 'parcel src/index.html' --profile=vijitail-sst"
+    "dev": "sst bind 'parcel src/index.html --https' --profile=vijitail-sst"
   },
   "dependencies": {
+    "aws-amplify": "^5.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14"
+    "@types/react-dom": "^18.2.14",
+    "parcel": "^2.10.0"
   }
 }
