--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "sst": "^2.29.2",
+    "@tsconfig/node18": "^18.2.2",
     "aws-cdk-lib": "2.95.1",
+    "buffer": "^5.5.0||^6.0.0",
     "constructs": "10.2.69",
-    "typescript": "^5.2.2",
-    "@tsconfig/node18": "^18.2.2"
+    "events": "^3.1.0",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "sst": "^2.29.2",
+    "typescript": "^5.2.2"
   },
   "workspaces": [
     "packages/*"
